fury-on-eks/manifests/ingress/resources/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    forecastle.stakater.com/expose: "true"
    forecastle.stakater.com/appName: "Forecastle"
    forecastle.stakater.com/icon: "https://raw.githubusercontent.com/stakater/Forecastle/master/assets/web/forecastle-round-100px.png"
  name: forecastle
  namespace: ingress-nginx
spec:
  rules:
  - host: forecastle.fury.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: forecastle
            port:
              number: 80
